--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col col-xs-12 col-sm-1 col-sm-offset-1">
+
+    <h1>Restaurants <%= @restaurant.name %></h1>
+    <h3>Address: <%= @restaurant.address %></h3>
+    <h3>Phone: <%= @restaurant.phone_number %></h3>
+    <h3>Category: <%= @restaurant.category %></h3>
+  <%= link_to "All Restaurants", restaurants_path %>
+  <%= link_to "Make a review to <%= @restaurant.name %>", restaurant_reviews_path(@restaurant) %>
+</div>
+</div>
+</div>
