--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col col-xs-12 col-sm-1 col-sm-offset-1">
+
+    <h1>All Restaurants</h1>
+    <ul class="list-group">
+      <%= restaurant.each do |r| %>
+      <div class="list-group-item">
+        <%= link_to r.name, restaurant_path(r) %>
+      </div>
+    </ul>
+
+</div>
+</div>
+</div>
